add card of truck

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "i18next": "^20.2.2",
     "lodash.debounce": "^4.0.8",
+    "lodash.map": "^4.6.0",
     "react": "17.0.1",
     "react-i18next": "^11.8.15",
     "react-native": "0.64.0",
@@ -41,6 +42,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.map": "^4.6.13",
     "@types/react-native": "^0.64.0",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
