--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,12 +5,15 @@ platform :ios, '10.0'
 
 target 'lunche' do
   config = use_native_modules!
+  permissions_path = '../node_modules/react-native-permissions/ios'
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => true
   )
+
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
 
   target 'luncheTests' do
     inherit! :complete
