--- a/ios/lunche/Info.plist
+++ b/ios/lunche/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -57,5 +57,7 @@
 		<string>Lato-Black.ttf</string>
 		<string>Lato-Bold.ttf</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Lunche needs access to your location.</string>
 </dict>
 </plist>
