--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "i18next": "^20.2.2",
     "lodash.debounce": "^4.0.8",
     "lodash.map": "^4.6.0",
+    "lodash.some": "^4.6.0",
     "react": "17.0.1",
     "react-i18next": "^11.8.15",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
     "react-native-flipper": "^0.87.0",
+    "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.0.3",
+    "react-native-permissions": "^3.0.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
@@ -43,6 +46,7 @@
     "@types/jest": "^26.0.20",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.map": "^4.6.13",
+    "@types/lodash.some": "^4.6.6",
     "@types/react-native": "^0.64.0",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
