connect food API

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dayjs": "^1.10.4",
     "i18next": "^20.2.2",
     "lodash.debounce": "^4.0.8",
+    "lodash.filter": "^4.6.0",
+    "lodash.find": "^4.6.0",
     "lodash.map": "^4.6.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
@@ -49,6 +51,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.filter": "^4.6.6",
+    "@types/lodash.find": "^4.6.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
