--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,12 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/Appfile
+fastlane/Matchfile
+/android/play-store-credentials.json
 
 # Bundle artifact
 *.jsbundle
