--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,7 +26,12 @@ target 'lunche' do
   # you should disable the next line.
   use_flipper!()
 
+  pre_install do |installer|
+    $RNMBGL.pre_install(installer)
+  end
+
   post_install do |installer|
     react_native_post_install(installer)
+    $RNMBGL.post_install(installer)
   end
 end
