--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
+    "lodash.includes": "^4.3.0",
     "lodash.map": "^4.6.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
@@ -54,6 +55,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.filter": "^4.6.6",
     "@types/lodash.find": "^4.6.6",
+    "@types/lodash.includes": "^4.3.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
