--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
     "lodash.includes": "^4.3.0",
+    "lodash.intersection": "^4.4.0",
     "lodash.map": "^4.6.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
@@ -56,6 +57,7 @@
     "@types/lodash.filter": "^4.6.6",
     "@types/lodash.find": "^4.6.6",
     "@types/lodash.includes": "^4.3.6",
+    "@types/lodash.intersection": "^4.4.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
