--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash.find": "^4.6.0",
     "lodash.includes": "^4.3.0",
     "lodash.intersection": "^4.4.0",
+    "lodash.last": "^3.0.0",
     "lodash.map": "^4.6.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
@@ -58,6 +59,7 @@
     "@types/lodash.find": "^4.6.6",
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.intersection": "^4.4.6",
+    "@types/lodash.last": "^3.0.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
