--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.intersection": "^4.4.0",
     "lodash.last": "^3.0.0",
     "lodash.map": "^4.6.0",
+    "lodash.omit": "^4.5.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
     "promise.allsettled": "^1.0.4",
@@ -61,6 +62,7 @@
     "@types/lodash.intersection": "^4.4.6",
     "@types/lodash.last": "^3.0.6",
     "@types/lodash.map": "^4.6.13",
+    "@types/lodash.omit": "^4.5.6",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
     "@types/promise.allsettled": "^1.0.3",
