--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash.omit": "^4.5.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
+    "lodash.sumby": "^4.6.0",
     "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
     "react-i18next": "^11.8.15",
@@ -65,6 +66,7 @@
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
+    "@types/lodash.sumby": "^4.6.6",
     "@types/promise.allsettled": "^1.0.3",
     "@types/react-native": "^0.64.0",
     "@types/react-native-snap-carousel": "^3.8.3",
