--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.5.1",
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-mapbox-gl/maps": "^8.2.0-beta2",
@@ -31,11 +32,13 @@
     "lodash.last": "^3.0.0",
     "lodash.map": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
     "lodash.sumby": "^4.6.0",
     "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
+    "react-hook-form": "^7.6.9",
     "react-i18next": "^11.8.15",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
@@ -49,7 +52,8 @@
     "react-native-screens": "^3.1.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -64,6 +68,7 @@
     "@types/lodash.last": "^3.0.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.pick": "^4.4.6",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
     "@types/lodash.sumby": "^4.6.6",
