--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lodash.map": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
+    "lodash.reduce": "^4.6.0",
+    "lodash.reject": "^4.6.0",
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
     "lodash.sumby": "^4.6.0",
@@ -69,6 +71,8 @@
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.pick": "^4.4.6",
+    "@types/lodash.reduce": "^4.6.6",
+    "@types/lodash.reject": "^4.6.6",
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
     "@types/lodash.sumby": "^4.6.6",
