--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-i18next": "^11.8.15",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-date-picker": "^3.3.0",
     "react-native-flipper": "^0.87.0",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
