payment screen + stripe #LUN-62 #LUN-64

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "@stripe/stripe-react-native": "^0.1.2",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "i18next": "^20.2.2",
@@ -40,6 +41,7 @@
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
     "lodash.sumby": "^4.6.0",
+    "lodash.upperfirst": "^4.3.1",
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^4.0.2",
     "promise.allsettled": "^1.0.4",
@@ -84,6 +86,7 @@
     "@types/lodash.round": "^4.0.6",
     "@types/lodash.some": "^4.6.6",
     "@types/lodash.sumby": "^4.6.6",
+    "@types/lodash.upperfirst": "^4.3.6",
     "@types/promise.allsettled": "^1.0.3",
     "@types/react-native": "^0.64.0",
     "@types/react-native-snap-carousel": "^3.8.3",
