--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash.find": "^4.6.0",
     "lodash.includes": "^4.3.0",
     "lodash.intersection": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.last": "^3.0.0",
     "lodash.map": "^4.6.0",
     "lodash.omit": "^4.5.0",
@@ -38,6 +39,8 @@
     "lodash.round": "^4.0.4",
     "lodash.some": "^4.6.0",
     "lodash.sumby": "^4.6.0",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^4.0.2",
     "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
     "react-hook-form": "^7.6.9",
@@ -68,6 +71,7 @@
     "@types/lodash.find": "^4.6.6",
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.intersection": "^4.4.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.last": "^3.0.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.omit": "^4.5.6",
