--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-i18next": "^11.8.15",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-confirmation-code-field": "^7.1.0",
     "react-native-date-picker": "^3.3.0",
     "react-native-flipper": "^0.87.0",
     "react-native-geolocation-service": "^5.3.0-beta.1",
