--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
+    "lodash.groupby": "^4.6.0",
     "lodash.includes": "^4.3.0",
     "lodash.intersection": "^4.4.0",
     "lodash.isequal": "^4.5.0",
@@ -70,6 +71,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.filter": "^4.6.6",
     "@types/lodash.find": "^4.6.6",
+    "@types/lodash.groupby": "^4.6.6",
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.intersection": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
