--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,12 +134,17 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    dexOptions {
+       javaMaxHeapSize "4g"
+    }
+
     defaultConfig {
         applicationId "com.lunche"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 8
         versionName "1.0.0"
+        multiDexEnabled true
     }
     splits {
         abi {
