--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "lodash.includes": "^4.3.0",
     "lodash.intersection": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.isnull": "^3.0.0",
     "lodash.last": "^3.0.0",
     "lodash.map": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.omitby": "^4.6.0",
     "lodash.pick": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "lodash.reject": "^4.6.0",
@@ -77,9 +79,11 @@
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.intersection": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.isnull": "^3.0.6",
     "@types/lodash.last": "^3.0.6",
     "@types/lodash.map": "^4.6.13",
     "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.omitby": "^4.6.6",
     "@types/lodash.pick": "^4.4.6",
     "@types/lodash.reduce": "^4.6.6",
     "@types/lodash.reject": "^4.6.6",
