--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,7 +24,7 @@ target 'lunche' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   pre_install do |installer|
     $RNMBGL.pre_install(installer)
