--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-config": "^1.4.2",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-date-picker": "^3.3.0",
+    "react-native-flipper": "^0.87.0",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.0.3",
