--- a/ios/lunche/Info.plist
+++ b/ios/lunche/Info.plist
@@ -59,5 +59,7 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
     <string>To scan cards</string>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 </dict>
 </plist>
